[package]
name = "nodejs-sys"
version = "0.4.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"
build = "build.rs"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "node", "nodejs", "napi", "n-api"]
repository = "https://github.com/zauberpony/nodejs-sys"
license = "MIT"
description = "Native bindings to the nodejs' n-api"
include = [
    "node/src/node_api.h",
    "node/src/js_native_api.h",
    "node/src/js_native_api_types.h",
    "node/src/node_api_types.h",
    "**/*.rs",
    "Cargo.toml",
]

[dependencies]

[build-dependencies]
bindgen = "0.53.2"

[features]
# no features by default
default = []

# enable the experimental API https://nodejs.org/dist/latest-v12.x/docs/api/n-api.html#n_api_usage
experimental = []

# select API version of supported versions
napi_v5 = []
napi_v6 = []
