[package]
name = "nodejs-sys"
version = "0.13.0"
authors = ["Elmar Athmer <elmar@athmer.org>"]
edition = "2018"
build = "build.rs"
categories = ["external-ffi-bindings"]
keywords = ["ffi", "node", "nodejs", "napi", "n-api"]
repository = "https://github.com/elmarx/nodejs-sys"
license = "MIT"
description = "Native bindings to the nodejs' n-api"
include = [
    "node/src/node_api.h",
    "node/src/js_native_api.h",
    "node/src/js_native_api_types.h",
    "node/src/node_api_types.h",
    "**/*.rs",
    "Cargo.toml",
]
readme = "README.md"

[dependencies]

[build-dependencies]
bindgen = "0.59.1"

[features]
# no features by default
default = []

# enable the experimental API https://nodejs.org/dist/latest-v14.x/docs/api/n-api.html#n_api_usage
experimental = []

# select API version of supported versions
napi_v5 = []
napi_v6 = []
napi_v7 = []
napi_v8 = []
